fixing font on mobile

--- a/index.css
+++ b/index.css
@@ -524,6 +524,7 @@ i {
 @media only screen and (max-width: 767.98px) {
     html,body {
         overflow-x: none;
+        font-family: "Mulish", sans-serif;
     }
 
     /* navbar */
@@ -562,11 +563,12 @@ i {
     }
 
     .headerCol {
-        margin-left: -375px;
+        margin-left: -385px;
     }
 
     .headerCol h1 {
         font-size: 3.5rem;
+        font-family: "Geometos";
     }
 
     .infoCol {
@@ -600,6 +602,7 @@ i {
     }
 
     .portfolioHeader h1 {
+        font-family: "Geometos";
         font-size: 3.5rem;
         writing-mode: unset;
         transform: none;
@@ -628,6 +631,10 @@ i {
     .box button {
         margin-top: 0;
         font-size: 0.5em;
+    }
+    
+    button {
+        font-family: "Geometos";
     }
 
     .box p {
